[REFACTOR] 봉사 신청글(Post) 기능 추가 및 리팩토링